# Relay

./: BLUEPRINT.md  CHANGELOG.md  QUICKSTART.md  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
relay-docs/: _config.yml  index.html
relay-docs/docs/: api-reference.html  configuration.html  getting-started.html  sdks.html
relay-js/: package.json
relay-js/src/: index.ts  relay.ts
relay-node/: CLAUDE.md  README.md  package.json
relay-node/src/: auth.ts  client.ts  index.ts  middleware.ts  types.ts
relay-php/: README.md  composer.json  relay.php
relay-php/src/: RelayClient.php  RelayServiceProvider.php
relay-python/: CLAUDE.md  README.md  pyproject.toml  setup.py
relay-python/relay/: __init__.py  auth.py  client.py
relay-python/relay/django/: __init__.py  channels.py  middleware.py
relay-ruby/: CLAUDE.md  README.md  relay-ruby.gemspec
relay-ruby/lib/: relay.rb
relay-ruby/lib/relay/: auth.rb  channel.rb  client.rb
relay-server/: .dockerignore  .env  CHANGELOG.md  CLAUDE.md  Dockerfile  apps.json  docker-compose.yml  env.example  go.mod  main.go
relay-server/.github/workflows/: ci.yml  release.yml
relay-server/internal/api/: handler.go
relay-server/internal/apps/: apps.go
relay-server/internal/auth/: auth.go
relay-server/internal/config/: config.go
relay-server/internal/dashboard/: dashboard.go
relay-server/internal/eventstore/: store.go
relay-server/internal/history/: history.go
relay-server/internal/hub/: channel.go  client.go  export.go  hub.go
relay-server/tests/: integration_test.go
(+7 files in other folders)
